--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.1"
+    "@astrojs/solid-js": "^5.0.4",
+    "astro": "^5.3.1",
+    "solid-js": "^1.9.5"
   },
   "devDependencies": {
     "prettier": "^3.5.2",
