--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^5.0.4",
+    "@tailwindcss/vite": "^4.0.8",
     "astro": "^5.3.1",
-    "solid-js": "^1.9.5"
+    "solid-js": "^1.9.5",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "prettier": "^3.5.2",
