--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.1",
     "@astrojs/solid-js": "^5.0.4",
     "@tailwindcss/vite": "^4.0.8",
     "astro": "^5.3.1",
