--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "andrew-holzbrook-dev",
   "type": "module",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.2.1",
-    "astro": "^5.3.1"
+    "@tailwindcss/vite": "^4.0.8",
+    "astro": "^5.3.1",
+    "tailwindcss": "^4.0.8"
   }
 }
